--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,14 +4,16 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/todo?useUnicode=true&characterEncoding=utf8
-    username: afs
-    password: afs
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    show-sql: true
     hibernate:
-      ddl-auto: update
-      properties:
-        hibernate:
-          dialect: org.hibernate.dialect.MySQL8Dialect
-          show-sql: true
+      ddl-auto: validate
   flyway:
+    enabled: true
+    locations: classpath:db/migration
     baseline-on-migrate: true
+    validate-on-migrate: true
